// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render menu overlay Not isOpen 1`] = `
<div
  className="menu_overlay--hidden"
  role="button"
/>
`;

exports[`Render menu overlay isOpen 1`] = `
<div
  className="menu_overlay"
  role="button"
/>
`;
